# BoostBuddy

student_clash/: .gitignore  app.py  chainlit.md  chainlit.toml  pyproject.toml
student_clash/src/student_clash/: crew.py  main.py
student_clash/src/student_clash/config/: agents.yaml  tasks.yaml
student_clash/src/student_clash/tools/: custom_tool.py  memory_manager.py
