[project]
name = "student_clash"
version = "0.1.0"
description = "student-clash using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chainlit>=2.9.2",
    "crewai[tools]==1.5.0",
]

[project.scripts]
student_clash = "student_clash.main:run"
run_crew = "student_clash.main:run"
train = "student_clash.main:train"
replay = "student_clash.main:replay"
test = "student_clash.main:test"
run_with_trigger = "student_clash.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
